--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,13 @@
 }
 
 body {
-    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     background-color: var(--background);
     font-family: Poppins, "sans-serif";
     color: var(--text-base);
-    margin-left: 33px;
 }
 
 /*HEADER*/
@@ -185,4 +187,35 @@ form p:nth-last-child(1){
 
 form p:nth-last-child(1):hover{
     text-decoration: underline;
+}
+
+/*MEDIA QUERIES*/
+@media (min-width: 1160px) {
+    body{
+        display: block;
+        background-image: url(/assets/img/side-image.jpg);
+        background-size: 682px;
+        background-repeat: no-repeat;
+        background-position: 683px;
+    }
+    header{
+        margin-left: 40px;
+    }
+    header div {
+        width: 334px;
+        margin-top: 120px;
+        margin-left: 153px;
+    }
+    main{
+        width: 572px;
+        height: 512px;
+        margin-top: -60px;
+        margin-left: 74px;
+        background-color: var(--form-background);
+    }
+    form{
+        margin: auto;
+        padding-top: 149px;
+    }
+    
 }
