--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@ main form {
 main form input {
     height: 44px;
     background-color: var(--background);
+    color: var(--text-base);
 }
 
 main form label {
